Fix closed folder alignments

--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -3,7 +3,7 @@
 		width: 100%;
 	}
 	.closedFolderIconWrapper__7321f {
-		padding: 6px;
+		//padding: 6px;
 		position: relative;
 		z-index: 1;
 	}
@@ -33,8 +33,8 @@
 	}
 	.guildIcon__2e5ab {
 		border-radius: var(--server-folder-icon-shape);
-		width: calc(var(--server-icon-size) / 1.8);
-		height: calc(var(--server-icon-size) / 1.8);
+		width: calc(var(--server-icon-size) / 1.9);
+		height: calc(var(--server-icon-size) / 1.9);
 	}
 
 	[id^='folder-items'][role='group'] {
